Refactor du findAll pour mieux comprendre + ajout annotation à Role + ajout du test pour Role